infra/k8s-prod/ingress-srv-nip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaming-ingress-service-nip
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 48.206.235.122.nip.io
      secretName: betstan-nip-tls
  rules:
    - host: 48.206.235.122.nip.io
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gaming-auth-srv
                port:
                  number: 3000
          - path: /api/event/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gaming-event-srv
                port:
                  number: 3000
          - path: /api/slip/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gaming-slip-srv
                port:
                  number: 3000
          - path: /api/bet/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gaming-bet-srv
                port:
                  number: 3000
          - path: /api/backoffice/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gaming-backoffice-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gaming-client-srv
                port:
                  number: 3000
